--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     </section>
   </main>
 
+  <script type="application/javascript" charset="utf-8" src="js/utils.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&callback=initMap"></script>
