styling: implemented css-grid styling
implemented css-grid styling for larger screen sizes

--updated css to work with new syling
--updated html to enable css-grid to differentiate specific elements on
specific pages
--updated main.js to apply needed classes to list items

--- a/restaurant.html
+++ b/restaurant.html
@@ -27,7 +27,7 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent">
+  <main id="maincontent" class='restaurant-wrapper'>
     <!-- Beginning map -->
     <section id="map-container">
       <div id="map"></div>
@@ -35,7 +35,7 @@
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h1>
       <picture id="restaurant-img"></picture>
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
