--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           Cuisine
         </label>
       </div>
-      <ul id="restaurants-list"></ul>
+      <ul id="restaurants-list" class='list-wrapper'></ul>
     </section>
   </main>
 
