fix: accessibility enhancements
many changes to increase the accessibility of the website

index.html
--removed the nav in the header as it is too simple to provide benefit
--added description for the google maps map
--added tab indexing to filter results and to footer

restaurant.html
--re-arranged nav so that the breadcrumbs were within nav according to
aria spec
--moved h1 title out of nav as it is too simple to provide benefit
--added description for the google maps map
--added tab indexing to sections and footer

style.css
--styles to support above changes
--style changes for contrast
--updated some styles from h1 to h2 since they were at wrong heading
level

restaurant.json
--added alt text to make photo descriptions more meaningful

main.js
--added code to add title to google maps iframe
--updated createRestaurantHTML to use new alt data
--updated createRestaurantHTML to make restaurant names h2 instead of h1
--removed old code

restaurant.js
--added code to add title to google maps iframe
--updated fillRestaurantHTML to use new alt data
--added setting of tabIndex to fillBreadcrumb

utils.js
--added fixIframe to perform the iframe title attribute insertion

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 
 <body>
   <header>
-    <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
-    </nav>
+    <h1><a href="/">Restaurant Reviews</a></h1>
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
-      <div id="map"></div>
+    <section id="map-container" aria-label="Restaurant Map">
+      <p style="display: none;" id="maplabel">Google Maps</p>
+      <p id="mapinfo" style="display: none;">A Map of New York.</p>
+      <div id="map" role="application" aria-describedby="mapinfo" aria-labelledby="maplabel"></div>
     </section>
-    <section>
+    <section aria-label="Restaruant List">
       <div class="filter-options">
-        <h2>Filter Results</h2>
+        <h2 tabindex="0">Filter Results</h2>
         <label>
           <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
             <option value="all">All Neighborhoods</option>
@@ -47,7 +47,7 @@
   <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&callback=initMap"></script>
 
 
-  <footer id="footer">
+  <footer id="footer" tabindex="0">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
 
