feat: IndexedDB capabilities added
major addition of IndexedDB capabilities in the new  IndexedDB wrapper
IDB. This requried rewriting a majority of dbhelper.js, main.js, and
restaraunt_info.js functions to utilize not only the new idb.js
capability but also to be promise oriented so that control of the
execution flow is maintained.

--added idb.js a custom promisified IndexedDB wrapper
--added script tags for idb in index.html and restaurant.html
--dbhelper.js converted to use idb.js
--main.js converted to use idb.js
--restaurant_info.js converted to use idb.js
--main.update_restaurants moved to 'DOMContentLoaded' event callback to
resolve race condition with window.initMap
--many changes wrt eslint findings
--changes to suport atom-ternjs

--- a/restaurant.html
+++ b/restaurant.html
@@ -14,7 +14,7 @@
   <!-- Beginning header -->
   <header>
     <h1><a href="/">Restaurant Reviews</a></h1>
-  
+
     <!-- Beginning nav -->
     <nav aria-label="Breadcrumb">
       <ul id="breadcrumb">
@@ -22,12 +22,12 @@
       </ul>
     </nav>
     <!-- Beginning breadcrumb -->
-    
+
     <!-- End breadcrumb -->
     <!-- End nav -->
-  
+
   <!-- End header -->
-  </header>  
+  </header>
   <!-- Beginning main -->
   <main id="maincontent" class='restaurant-wrapper'>
     <!-- Beginning map -->
@@ -60,6 +60,7 @@
   <!-- End footer -->
 
   <!-- Beginning scripts -->
+  <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/utils.js"></script>
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
