--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <div class="filter-options">
         <h2 tabindex="0">Filter Results</h2>
         <label>
-          <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+          <select id="neighborhoods-select" name="neighborhoods" onchange="update_restaurants()">
             <option value="all">All Neighborhoods</option>
           </select>
           Neighborhood
         </label>
         <label>
-          <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+          <select id="cuisines-select" name="cuisines" onchange="update_restaurants()">
             <option value="all">All Cuisines</option>
           </select>
           Cuisine
@@ -45,11 +45,11 @@
     </section>
   </main>
 
+  <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/utils.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&callback=initMap"></script>
-
 
   <footer id="footer" tabindex="0">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
