fix: updated google-maps api key
the default google-maps behavior changed and requires key for use.
that key has been added to the appropriate html files

--- a/restaurant.html
+++ b/restaurant.html
@@ -67,7 +67,7 @@
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
-  <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&callback=initMap"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZlZe6MpYceYeAt52m5nj3-tQ5BLjb7IA&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
 
 </body>
