--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <script type="application/javascript" charset="utf-8" src="js/utils.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&callback=initMap"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZlZe6MpYceYeAt52m5nj3-tQ5BLjb7IA&libraries=places&callback=initMap"></script>
 
   <footer id="footer" tabindex="0">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
