feature: added ability to submit restaurant reviews
submission of reviews is now possible, even offline, with the review 
re-syncing after regaining connection.

--sytles.css: styles to support the review form
--idb.js: added ability to delete keys as well as clear a store
--idb.js: added open_cursor and open_key_cursor to indicies
--dbhelper.js: incremented db version to 3
--dbhelper.js: added restaurant_id index to reviews
--dbhelper.js: added new offline store to store reviews when offline
--dbhelper.js: fetch_reviews now requries the id of the restaurant to 
which reviews are being retrieved
--dbhelper.js: refactored fetch_reviews to only return reviews for the 
restaurant id provided
--dbhelper.js: added do_base_restaurant_reviews_fetch which uses the 
reviews API to return reviews for a given restaurant id
--dbhelper.js: added refresh_restaurant_reviews to update reviews in 
database on page load
--dbhelper.js: updated fetch_reviews_by_id to no longer filter as 
fetchh_reviews(id) will perform that automatically
--dbhelper.js: added update_review_record to update a specific review in 
the idb
--dbhelper.js: added do_submit_review_fetch which submits a review to 
the reviews API
--dbhelper.js: added do_submit_offline_reviews which submits all offline 
reviews and then clears the offline idb store upon complettion
--dbhelper.js: added store_review_offline which puts a review in the 
offline store
--dbhelper.js: added fetch_offline_reviews which returns reviews stored 
in the offline store
--restaurant.html: added review form
--restaurant.html: updated favorite button to have better early 
aria-label so audit wouldn't think it didnt have one, even though it 
did.
--restaurant_info.js: updated early DOMContentLoaded procedures to use 
DBHelper's refresh_restaurant_reviews
--restaurant_info.js: added form onsubmit setup
--restaurant_info.js: added handle_form_submit to handle form onsubmit 
events
--restaurant_info.js: added do_online_form_processing to handle form

--- a/restaurant.html
+++ b/restaurant.html
@@ -49,13 +49,28 @@
         <p id="restaurant-cuisine"></p>
         <p id="restaurant-address"></p>
         <table id="restaurant-hours"></table>
-        <button id='favorite-btn'></button>
+        <button id='favorite-btn' aria-label="make favorite"></button>
       </div>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
     <section id="reviews-container" tabindex="0" aria-label="Restaurant Reviews">
-      <ul id="reviews-list"></ul>
+      <h2>Reviews</h2>
+      <ul id="reviews-list" aria-label='review list'></ul>
+      <form tabindex="0" id="review-form" class="review-form" aria-label="restaurnt review form">
+        <h3 class="review-form-heading">Review Restaurant</h3>
+
+        <label class="review-label" for="name">Name:</label>
+        <input type="text" name="name" id="name" class="review-element review-text-input">
+
+        <label class="review-label" for="rating">Rating:</label>
+        <input type="number" name="rating" id="rating" class="review-element review-number-input">
+
+        <label class="review-label" for="comments">Comments:</label>
+        <textarea type="text" name="comments" id="comments" class="review-element review-textarea"></textarea>
+
+        <button name="submission-btn" class="review-element submit-btn" aria-label="submit review">Submit Review</button>
+      </form>
     </section>
     <!-- End reviews -->
   </main>
