cleanup: cleaning and tidying
various actions to clean up things here

--updated README
--updated CODEOWNERS
--made sure scripts used defer
--updated google maps API_KEY
--removed old cookie code

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     </section>
   </main>
 
-  <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/utils.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZlZe6MpYceYeAt52m5nj3-tQ5BLjb7IA&libraries=places&callback=initMap"></script>
+  <script type="application/javascript" charset="utf-8" src="js/idb.js" defer></script>
+  <script type="application/javascript" charset="utf-8" src="js/utils.js" defer></script>
+  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js" defer></script>
+  <script type="application/javascript" charset="utf-8" src="js/main.js" defer></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjwDOyY3_jzBdmr3YrrtiFhldxG-P18qU&libraries=places&callback=initMap"></script>
 
   <footer id="footer" tabindex="0">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
