--- a/restaurant.html
+++ b/restaurant.html
@@ -83,14 +83,14 @@
   <!-- End footer -->
 
   <!-- Beginning scripts -->
-  <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/utils.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/idb.js" defer></script>
+  <script type="application/javascript" charset="utf-8" src="js/utils.js" async defer></script>
   <!-- Database helpers -->
-  <script type="text/javascript" src="js/dbhelper.js"></script>
+  <script type="text/javascript" src="js/dbhelper.js" defer></script>
   <!-- Main javascript file -->
-  <script type="text/javascript" src="js/restaurant_info.js"></script>
+  <script type="text/javascript" src="js/restaurant_info.js" defer></script>
   <!-- Google Maps -->
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZlZe6MpYceYeAt52m5nj3-tQ5BLjb7IA&libraries=places&callback=initMap"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjwDOyY3_jzBdmr3YrrtiFhldxG-P18qU&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
 
 </body>
